# extractVideoSubtitle

./: .gitignore  aichat.py  aispeech.py  aisummary.py  extractVideoSubtitle.py  pyproject.toml  readme.md  soop_downloader.py  splitFile.py  videoScale.py  vodDownload.py
ai/: GeminiAI.py
prompt/: aispeech.md  게시판입력용.md  내용정리.md  내용정리프롬프트.md  약확인및보완.md  영상요약프롬프트.md  요리레시피 추천.md  처방약설명.md  한국어번역자막.md  핵심내용요약.md
ref/: whisper-faster.md
ref/gemini25flashimage/: generateAiImage.py  generateaiimage_test_prompt.md
result/: hzV6ZJ6vOW4.en.srt.en  qwenimageedit_sample.md
shell/: genSubtitle.sh  soopDownload.sh
