[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ffmpeg-python>=0.2.0",
    "yt-dlp>=2025.9.23",
    "google-generativeai>=0.8.5",
    "ollama>=0.5.3",
    "requests>=2.32.4",
    "bs4>=0.0.2",
    "pyttsx3>=2.90",
    "pydub>=0.25.1",
    "faster-whisper[cuda]>=1.2.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
